# tunable_world

./: Cargo.toml  README.md
assets/shaders/: chromatic_aberration.wgsl  crt.wgsl  gradient_tint.wgsl  lut.wgsl  post_processing.wgsl  post_processing_crt.wgsl
src/: camera.rs  inspector.rs  main.rs  player.rs
src/post/: chroma_aberration.rs  crt.rs  gradient_tint.rs  lut.rs  mod.rs  outlines.rs  ui.rs
