[package]
name = "tunable_world"
version = "0.1.0"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["jpeg", "png"] }
bevy_egui = "0.36"
bevy_rapier3d = { version = "0.31", features = ["dim3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
